[gd_scene load_steps=3 format=3 uid="uid://c2adcueikxl7s"]

[ext_resource type="Texture2D" uid="uid://bl5anqacifbom" path="res://Sprites/Heart_Full.png" id="1_37p78"]
[ext_resource type="Script" uid="uid://c2tku0rt15l28" path="res://Scripts/hud.gd" id="1_64ctp"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = -685.0
offset_bottom = 39.0
grow_horizontal = 2

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_37p78")

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_37p78")

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_37p78")

[node name="Heart4" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_37p78")

[node name="Heart5" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_37p78")
